# etu-file-manager

./: CMakeLists.txt  FileManager.cpp  README.md
.github/workflows/: build.yml
